- Revert the `Acrylic10` change as it breaks non-transparent use cases.

--- a/src/PSADT/PSADT.UserInterface/Dialogs/Fluent/FluentDialog.xaml
+++ b/src/PSADT/PSADT.UserInterface/Dialogs/Fluent/FluentDialog.xaml
@@ -14,7 +14,7 @@
     ui:TitleBar.CloseButtonAvailability="Collapsed"
     ui:TitleBar.ExtendViewIntoTitleBar="True"
     ui:WindowHelper.CornerStyle="Round"
-    ui:WindowHelper.SystemBackdropType="Acrylic10"
+    ui:WindowHelper.SystemBackdropType="Acrylic"
     ui:WindowHelper.UseModernWindowStyle="True"
     x:ClassModifier="internal"
     AutomationProperties.AutomationId="PSAppDeployToolkitDialog"
