- Tune the Fluent `TextRenderingMode` property and recompile DLL files.

--- a/src/PSADT/PSADT.UserInterface/Dialogs/Fluent/FluentDialog.xaml
+++ b/src/PSADT/PSADT.UserInterface/Dialogs/Fluent/FluentDialog.xaml
@@ -28,6 +28,7 @@
     SizeToContent="Height"
     SnapsToDevicePixels="True"
     TextOptions.TextFormattingMode="Display"
+    TextOptions.TextRenderingMode="Grayscale"
     Topmost="True"
     UseLayoutRounding="True"
     mc:Ignorable="d"
